hphp/hack/test/typecheck/not_an_array.php.exp
File "not_an_array.php", line 6, characters 15-16:
Invalid argument (Typing[4110])
  File "not_an_array.php", line 3, characters 22-27:
  Expected `vec<_>`
  File "not_an_array.php", line 5, characters 14-30:
  But got `dict<int, string>`
